# curator_ai

./: .gitignore  README.md  pyproject.toml
curator_ai/: main.py
